# bubbles

./: .gitignore  CMakeLists.txt  Makefile  README.md  animations.c  animations.h  datafile.c  datafile.h  game.c  game.h  game_base.c  game_base.h  game_main.c  game_main.h  game_object_definitions.c  game_object_definitions.h  game_objects.c  game_objects.h  game_screens.c  game_screens.h  images.c  images.h  levels.c  levels.h  main.c  object_definitions.c  object_definitions.h  score.c  score.h  textures.c  textures.h  utils.c  utils.h
assets/: dragons.ppm  font.ppm  game.ppm  items.ppm  levels.ppm  monsters.ppm  screens.ppm  screens.xcf  test.ppm
data/: items.txt  levels.txt  lvl_creator.ods  monsters.txt  scores.txt
report/: refs.bib  report.tex
report/i/: files.odg
